added ex13 for histrogram and full bases comparison

--- a/applications/UQ/CMakeLists.txt
+++ b/applications/UQ/CMakeLists.txt
@@ -10,6 +10,7 @@ IF(SLEPC_FOUND)
   ADD_SUBDIRECTORY(ex10/)
   ADD_SUBDIRECTORY(ex11/)
   ADD_SUBDIRECTORY(ex12/)
+  ADD_SUBDIRECTORY(ex13/)
 ENDIF(SLEPC_FOUND)
   
 
