working on RK for Navier Stokes

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -105,3 +105,11 @@ ENDIF(BUILD_UQ)
 IF(BUILD_SW)
   ADD_SUBDIRECTORY(SW/)
 ENDIF(BUILD_SW)
+
+IF(BUILD_TUMOR)
+  ADD_SUBDIRECTORY(Tumor/)
+ENDIF(BUILD_TUMOR)
+
+IF(BUILD_RK)
+  ADD_SUBDIRECTORY(RK/)
+ENDIF(BUILD_RK)
