created nonlocal branch

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -102,6 +102,10 @@ IF(BUILD_UQ)
   ADD_SUBDIRECTORY(UQ/)
 ENDIF(BUILD_UQ)
 
+IF(BUILD_NONLOCAL)
+  ADD_SUBDIRECTORY(NONLOCAL/)
+ENDIF(BUILD_NONLOCAL)
+
 IF(BUILD_SW)
   ADD_SUBDIRECTORY(SW/)
 ENDIF(BUILD_SW)
