added increase sparsity pattern size

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -103,7 +103,7 @@ IF(BUILD_UQ)
 ENDIF(BUILD_UQ)
 
 IF(BUILD_NONLOCAL)
-  ADD_SUBDIRECTORY(NONLOCAL/)
+  ADD_SUBDIRECTORY(NonLocal/)
 ENDIF(BUILD_NONLOCAL)
 
 IF(BUILD_SW)
