--- a/applications/UQ/CMakeLists.txt
+++ b/applications/UQ/CMakeLists.txt
@@ -8,6 +8,7 @@ IF(SLEPC_FOUND)
   ADD_SUBDIRECTORY(ex3/)
   ADD_SUBDIRECTORY(ex4/)
   ADD_SUBDIRECTORY(ex10/)
+  ADD_SUBDIRECTORY(ex10a/)
   ADD_SUBDIRECTORY(ex11/)
   ADD_SUBDIRECTORY(ex12/)
   ADD_SUBDIRECTORY(ex13/)
