--- a/applications/tutorial/CMakeLists.txt
+++ b/applications/tutorial/CMakeLists.txt
@@ -12,6 +12,7 @@ ADD_SUBDIRECTORY(ex5/)
 ADD_SUBDIRECTORY(ex6/)
 ADD_SUBDIRECTORY(ex7/)
 ADD_SUBDIRECTORY(ex8/)
+ADD_SUBDIRECTORY(ex_time/)
 #ADD_SUBDIRECTORY(ex9/)
 
 
