--- a/applications/NonLocal/CMakeLists.txt
+++ b/applications/NonLocal/CMakeLists.txt
@@ -4,6 +4,7 @@ get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)
 
 IF(SLEPC_FOUND)
   ADD_SUBDIRECTORY(ex1/)
+  ADD_SUBDIRECTORY(ex2/)
 ENDIF(SLEPC_FOUND)
   
 
