Added namespace for flexible Jacobian computation, next turn it into a class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -99,6 +99,7 @@ utils/FemusInit.cpp
 utils/Files.cpp
 utils/InputParser.cpp
 utils/JsonInputParser.cpp
+utils/Math.cpp
 )
 
 IF (NOT LIBRARY_OUTPUT_PATH)
