added tracer_6multiple with 6 tracers

--- a/applications/SW/CMakeLists.txt
+++ b/applications/SW/CMakeLists.txt
@@ -41,4 +41,6 @@ IF(SLEPC_FOUND)
   ADD_SUBDIRECTORY(tracer_and_velocity/)
   
   ADD_SUBDIRECTORY(tracer_multiple/)
+  
+  ADD_SUBDIRECTORY(tracer_6multiple/)
 ENDIF(SLEPC_FOUND)
