--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,8 @@ equations/SystemTwo.cpp
 equations/TimeLoop.cpp
 equations/TransientSystem.cpp
 equations/NewmarkTransientSystem.cpp
+equations/FE_convergence.cpp
+equations/Assemble_jacobian.cpp
 fe/ElemType.cpp
 fe/Hexaedron.cpp
 fe/Line.cpp
@@ -99,8 +101,6 @@ utils/FemusInit.cpp
 utils/Files.cpp
 utils/InputParser.cpp
 utils/JsonInputParser.cpp
-utils/FE_convergence.cpp
-utils/Assemble_jacobian.cpp
 )
 
 IF (NOT LIBRARY_OUTPUT_PATH)
