Initiated Optimal control problem for incompressible solid mech with distributed control

--- a/applications/OptimalControl/solidopt/CMakeLists.txt
+++ b/applications/OptimalControl/solidopt/CMakeLists.txt
@@ -3,3 +3,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 # Full Dirichlet solid mechanics problem
 ADD_SUBDIRECTORY(./state_fulldir) 
+
+# distributed control solid mechanics problem
+ADD_SUBDIRECTORY(./solid_dist_ctrl) 
