Added Assemble_unknown separate files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,6 +46,7 @@ equations/TimeLoop.cpp
 equations/TransientSystem.cpp
 equations/FE_convergence.cpp
 equations/Assemble_jacobian.cpp
+equations/Assemble_unknown.cpp
 fe/ElemType.cpp
 fe/Hexaedron.cpp
 fe/Line.cpp
@@ -100,7 +101,6 @@ utils/FemusInit.cpp
 utils/Files.cpp
 utils/InputParser.cpp
 utils/JsonInputParser.cpp
-utils/Math.cpp
 uq/uq.cpp
 uq/sparseGrid.cpp
 )
