Assemble-related functions in separate directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,6 +275,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/utils)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/quadrature)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/parallel)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/equations)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/equations/assemble/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/solution)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/enums)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe)
