--- a/applications/MPM_FEM/CMakeLists.txt
+++ b/applications/MPM_FEM/CMakeLists.txt
@@ -7,6 +7,7 @@ ADD_SUBDIRECTORY(ex2/)
 ADD_SUBDIRECTORY(ex3/)
 ADD_SUBDIRECTORY(ex4/)
 ADD_SUBDIRECTORY(ex5/)
+ADD_SUBDIRECTORY(ex6/)
 
 FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/MPM_FEM/input/)
 FILE(COPY           ${PROJECT_SOURCE_DIR}/applications/MPM_FEM/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/MPM_FEM/input/)
