--- a/applications/MPM_FEM/CMakeLists.txt
+++ b/applications/MPM_FEM/CMakeLists.txt
@@ -8,6 +8,7 @@ ADD_SUBDIRECTORY(ex3/)
 ADD_SUBDIRECTORY(ex4/)
 ADD_SUBDIRECTORY(ex5/)
 ADD_SUBDIRECTORY(ex6/)
+ADD_SUBDIRECTORY(ex7/)
 
 FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/MPM_FEM/input/)
 FILE(COPY           ${PROJECT_SOURCE_DIR}/applications/MPM_FEM/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/MPM_FEM/input/)
