--- a/applications/OptimalControl/solidopt/CMakeLists.txt
+++ b/applications/OptimalControl/solidopt/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 
 # Full Dirichlet solid mechanics problem
-ADD_SUBDIRECTORY(./state_fulldir) 
+ADD_SUBDIRECTORY(./solid_state) 
 
 # distributed control solid mechanics problem
-ADD_SUBDIRECTORY(./solid_dist_ctrl) 
+ADD_SUBDIRECTORY(./solid_control_lifting) 
