--- a/applications/OptimalControl/solidopt/CMakeLists.txt
+++ b/applications/OptimalControl/solidopt/CMakeLists.txt
@@ -6,3 +6,6 @@ ADD_SUBDIRECTORY(./solid_state)
 
 # distributed control solid mechanics problem
 ADD_SUBDIRECTORY(./solid_control_lifting) 
+
+# boundary control solid mechanics problem
+ADD_SUBDIRECTORY(./solid_control_boundary) 
