added first 1D application

--- a/applications/MPM_FEM/CMakeLists.txt
+++ b/applications/MPM_FEM/CMakeLists.txt
@@ -10,6 +10,8 @@ ADD_SUBDIRECTORY(ex5/)
 ADD_SUBDIRECTORY(ex6/)
 ADD_SUBDIRECTORY(ex7/)
 ADD_SUBDIRECTORY(ex8/)
+ADD_SUBDIRECTORY(ex9/)
+
 
 FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/MPM_FEM/input/)
 FILE(COPY           ${PROJECT_SOURCE_DIR}/applications/MPM_FEM/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/MPM_FEM/input/)
