--- a/UseFemus.CMake.in
+++ b/UseFemus.CMake.in
@@ -3,12 +3,12 @@
 
 SET(FEMUS_LIBRARY_DIRS "@LIBRARY_OUTPUT_PATH@")
 
-IF(UNIX)
-SET(FEMUS_LIBRARIES "@PETSC_LIBRARIES@;@B64_LIBRARIES@;@JSONCPP_LIBRARIES@;@ADEPT_LIBRARIES@;@FPARSER_LIBRARY@;@MPI_EXTRA_LIBRARY@;@HDF5_LIBRARIES@;@LIBRARY_OUTPUT_PATH@libfemus.so;")
-ENDIF(UNIX)
+#IF(UNIX)
+SET(FEMUS_LIBRARIES "@PETSC_LIBRARIES@;@B64_LIBRARIES@;@JSONCPP_LIBRARIES@;@ADEPT_LIBRARIES@;@FPARSER_LIBRARY@;@MPI_EXTRA_LIBRARY@;@HDF5_LIBRARIES@;@LIBRARY_OUTPUT_PATH@libfemus.${DYLIB};")
+#ENDIF(UNIX)
 
-IF(APPLE)
-SET(FEMUS_LIBRARIES "@PETSC_LIBRARIES@;@B64_LIBRARIES@;@JSONCPP_LIBRARIES@;@ADEPT_LIBRARIES@;@FPARSER_LIBRARY@;@MPI_EXTRA_LIBRARY@;@HDF5_LIBRARIES@;@LIBRARY_OUTPUT_PATH@libfemus.dylib;")
-ENDIF(APPLE)
+#IF(APPLE)
+#SET(FEMUS_LIBRARIES #"@PETSC_LIBRARIES@;@B64_LIBRARIES@;@JSONCPP_LIBRARIES@;@ADEPT_LIBRARIES@;@FPARSER_LIBRARY@;@MPI_EXTRA_LIBRARY@;@HDF5_LIBRARIES@;@LIBRARY_OUTPUT_PATH@libfemus.${DYLIB};")
+#ENDIF(APPLE)
 
 SET(FEMUS_INCLUDES "@ADEPT_INCLUDE_DIRS@;@PETSC_INCLUDES@;@FPARSER_INCLUDE_DIR@;@CMAKE_SOURCE_DIR@/src/algebra;@CMAKE_SOURCE_DIR@/src/mesh;@CMAKE_SOURCE_DIR@/src/meshGencase;@CMAKE_SOURCE_DIR@/src/utils;@CMAKE_SOURCE_DIR@/src/quadrature;@CMAKE_SOURCE_DIR@/src/parallel;@CMAKE_SOURCE_DIR@/src/equations;@CMAKE_SOURCE_DIR@/src/solution;@CMAKE_SOURCE_DIR@/src/enums;@CMAKE_SOURCE_DIR@/src/fe;@CMAKE_SOURCE_DIR@/src/physics;@CMAKE_BINARY_DIR@/include;")
