--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,7 +118,7 @@ ENDIF (NOT LIBRARY_OUTPUT_PATH)
 ADD_LIBRARY(${PROJECT_NAME} SHARED ${femus_src})
 
 IF(APPLE)
-# target_link_libraries(${PROJECT_NAME} ${PETSC_DIR}/${PETSC_ARCH}/lib/libhdf5.dylib)
+target_link_libraries(${PROJECT_NAME} ${PETSC_DIR}/${PETSC_ARCH}/lib/libhdf5.dylib)
 target_link_libraries(${PROJECT_NAME} ${PETSC_DIR}/${PETSC_ARCH}/lib/libmpi.dylib)
 target_link_libraries(${PROJECT_NAME} ${PETSC_DIR}/${PETSC_ARCH}/lib/libpetsc.dylib)
 target_link_libraries(${PROJECT_NAME} ${PETSC_DIR}/${PETSC_ARCH}/lib/libmetis.dylib)
@@ -126,7 +126,7 @@ target_link_libraries(${PROJECT_NAME} ${PETSC_DIR}/${PETSC_ARCH}/lib/libmetis.dy
 # target_link_libraries(${PROJECT_NAME} ${LIBRARY_OUTPUT_PATH}/libadept.a)
 # target_link_libraries(${PROJECT_NAME} ${LIBRARY_OUTPUT_PATH}/libb64.a)
 
-target_link_libraries(${PROJECT_NAME} ${PETSC_LIBRARIES})
+#target_link_libraries(${PROJECT_NAME} ${PETSC_LIBRARIES})
 target_link_libraries(${PROJECT_NAME} ${B64_LIBRARIES})
 target_link_libraries(${PROJECT_NAME} ${JSONCPP_LIBRARIES})
 target_link_libraries(${PROJECT_NAME} ${ADEPT_LIBRARIES})
