--- a/applications/MPM_FEM/CMakeLists.txt
+++ b/applications/MPM_FEM/CMakeLists.txt
@@ -11,6 +11,7 @@ ADD_SUBDIRECTORY(ex6/)
 ADD_SUBDIRECTORY(ex7/)
 ADD_SUBDIRECTORY(ex8/)
 ADD_SUBDIRECTORY(ex9/)
+ADD_SUBDIRECTORY(ex10/)
 
 
 FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/MPM_FEM/input/)
