--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -97,3 +97,7 @@ ENDIF(BUILD_TUMOR)
 IF(BUILD_RK)
   ADD_SUBDIRECTORY(RK/)
 ENDIF(BUILD_RK)
+
+IF(BUILD_CONFORMAL)
+  ADD_SUBDIRECTORY(Conformal/)
+ENDIF(BUILD_CONFORMAL)
