working on parallel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,13 +68,13 @@ ENDIF(PETSC_FOUND)
 
 
 # Find MPI (optional)
-# FIND_PACKAGE(MPI)
-# MESSAGE(STATUS "MPI_FOUND = ${MPI_FOUND}")
+FIND_PACKAGE(MPI)
+MESSAGE(STATUS "MPI_FOUND = ${MPI_FOUND}")
 # 
-# SET(HAVE_MPI 0)
-# IF(MPI_FOUND)
+SET(HAVE_MPI 0)
+IF(MPI_FOUND)
 SET(HAVE_MPI 1)
-# ENDIF(MPI_FOUND)
+ENDIF(MPI_FOUND)
 
 # Find FParser
 FIND_PACKAGE(FParser)
