--- a/applications/OptimalControl/tempopt/CMakeLists.txt
+++ b/applications/OptimalControl/tempopt/CMakeLists.txt
@@ -26,7 +26,8 @@ IF(FPARSER_FOUND)
   TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${FPARSER_LIBRARY})
 ENDIF(FPARSER_FOUND)
 
-IF(MPI_FOUND)
+IF(MPI_FOUND) 
+  TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_CXX_LIBRARIES})
   TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_EXTRA_LIBRARY})
 ENDIF(MPI_FOUND)
 
