maybe compilie on parallel

--- a/applications/OptimalControl/tempopt/CMakeLists.txt
+++ b/applications/OptimalControl/tempopt/CMakeLists.txt
@@ -28,7 +28,7 @@ ENDIF(FPARSER_FOUND)
 
 IF(MPI_FOUND) 
   TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_CXX_LIBRARIES})
-  TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_EXTRA_LIBRARY})
+  #TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_EXTRA_LIBRARY})
 ENDIF(MPI_FOUND)
 
 IF(SLEPC_FOUND)
