--- a/applications/MPM_FEM/CMakeLists.txt
+++ b/applications/MPM_FEM/CMakeLists.txt
@@ -13,6 +13,7 @@ ADD_SUBDIRECTORY(ex8/)
 ADD_SUBDIRECTORY(ex9/)
 ADD_SUBDIRECTORY(ex10/)
 ADD_SUBDIRECTORY(ex11/)
+ADD_SUBDIRECTORY(ex12/)
 
 
 FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/MPM_FEM/input/)
