started MPM_FSI appliction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,8 @@ OPTION(BUILD_ISM "Build the Intersection Marker apps" ON)
 
 OPTION(BUILD_MPM_FEM "Build the MPM FEM apps" ON)
 
+OPTION(BUILD_MPM_FSI "Build the MPM FSI apps" ON)
+
 OPTION(BUILD_REFINEMENT "Build the Refiniment apps" ON)
 
 OPTION(BUILD_PETSC_DEBUG "Build the PETSC debug apps" ON)
