--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -70,6 +70,10 @@ IF(BUILD_MPM_FEM)
   ADD_SUBDIRECTORY(MPM_FEM/)
 ENDIF(BUILD_MPM_FEM)
 
+IF(BUILD_MPM_FSI)
+  ADD_SUBDIRECTORY(MPM_FSI/)
+ENDIF(BUILD_MPM_FSI)
+
 IF(BUILD_REFINEMENT)
   ADD_SUBDIRECTORY(Refinement/)
 ENDIF(BUILD_REFINEMENT)
