Moved some template functions to header otherwise compile was working only in debug, not in release

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,6 +49,7 @@ equations/TimeLoop.cpp
 equations/TransientSystem.cpp
 fe/ElemType.cpp
 fe/ElemType_template.cpp
+fe/ElemType_template_base.cpp
 fe/Hexaedron.cpp
 fe/Line.cpp
 fe/Quadrilateral.cpp
