Created some subfolders for better organization

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,11 +57,11 @@ fe/Wedge.cpp
 ism/Marker.cpp
 ism/PolynomialBases.cpp
 ism/Line.cpp
-meshGencase/Box.cpp
-meshGencase/Domain.cpp
-meshGencase/ElemSto.cpp
-meshGencase/MultiLevelMeshTwo.cpp
-meshGencase/GenCase.cpp
+mesh/gencase/Box.cpp
+mesh/gencase/Domain.cpp
+mesh/gencase/ElemSto.cpp
+mesh/gencase/MultiLevelMeshTwo.cpp
+mesh/gencase/GenCase.cpp
 mesh/geom_elements/GeomElemBase.cpp
 mesh/geom_elements/GeomElemHex8.cpp
 mesh/geom_elements/GeomElemHex27.cpp
@@ -76,13 +76,13 @@ mesh/geom_elements/GeomElemEdge3.cpp
 mesh/Elem.cpp
 mesh/Mesh.cpp
 mesh/MultiLevelMesh.cpp
-mesh/MeshGeneration.cpp
-mesh/GambitIO.cpp
-mesh/MED_IO.cpp
-mesh/MeshRefinement.cpp
-mesh/MeshMetisPartitioning.cpp
-mesh/MeshPartitioning.cpp
-mesh/MeshASMPartitioning.cpp
+mesh/input/MeshGeneration.cpp
+mesh/input/GambitIO.cpp
+mesh/input/MED_IO.cpp
+mesh/refinement/MeshRefinement.cpp
+mesh/partitioning/MeshPartitioning.cpp
+mesh/partitioning/MeshMetisPartitioning.cpp
+mesh/partitioning/MeshASMPartitioning.cpp
 parallel/MyMatrix.cpp
 parallel/MyVector.cpp
 physics/Fluid.cpp
@@ -92,14 +92,14 @@ physics/Solid.cpp
 quadrature/GaussPoints.cpp
 solution/MultiLevelSolution.cpp
 solution/Solution.cpp
-solution/Writer.cpp
-solution/VTKWriter.cpp
-solution/GMVWriter.cpp
-solution/XDMFWriter.cpp
+solution/output/Writer.cpp
+solution/output/VTKWriter.cpp
+solution/output/GMVWriter.cpp
+solution/output/XDMFWriter.cpp
 utils/FemusInit.cpp
 utils/Files.cpp
-utils/InputParser.cpp
-utils/JsonInputParser.cpp
+utils/input_parser/InputParser.cpp
+utils/input_parser/JsonInputParser.cpp
 uq/uq.cpp
 uq/sparseGrid.cpp
 )
