--- a/applications/Willmore/WillmoreSurface/CMakeLists.txt
+++ b/applications/Willmore/WillmoreSurface/CMakeLists.txt
@@ -17,6 +17,7 @@ ADD_SUBDIRECTORY(ex12/)
 ADD_SUBDIRECTORY(ex13/)
 ADD_SUBDIRECTORY(ex14/)
 ADD_SUBDIRECTORY(ex15/)
+ADD_SUBDIRECTORY(ex16/)
 
 FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/Willmore/WillmoreSurface/input/)
 FILE(COPY           ${PROJECT_SOURCE_DIR}/applications/Willmore/WillmoreSurface/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/Willmore/WillmoreSurface/input/)
