--- a/applications/FSI/SteadyState/Benchmarks/CMakeLists.txt
+++ b/applications/FSI/SteadyState/Benchmarks/CMakeLists.txt
@@ -12,5 +12,6 @@ femusMacroBuildApplication(${MAIN_FILE} ${EXEC_FILE})
 
 FILE(COPY ./run_fsi_2d.sh DESTINATION ${PROJECT_BINARY_DIR})
 FILE(COPY ./run_fsi_3d.sh DESTINATION ${PROJECT_BINARY_DIR})
+FILE(COPY ./run_from_kdevelop_with_redirect_or_tee.sh DESTINATION ${PROJECT_BINARY_DIR})
 
 
