added Nitsche application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,6 +201,8 @@ OPTION(BUILD_RK "Build the Runge-Kutta apps" ON)
 
 OPTION(BUILD_CONFORMAL "Build the Conformal mesh apps" ON)
 
+OPTION(BUILD_NITSCHE "Build the Nitsche apps" ON)
+
 #############################################################################################
 ### Build documentation (Doxygen)
 #############################################################################################
