Added laplacian_all_dims_neu app

--- a/applications/OptimalControl/CMakeLists.txt
+++ b/applications/OptimalControl/CMakeLists.txt
@@ -31,5 +31,6 @@ set(OPTCONTROL_FOLDER OptimalControl/)
   ADD_SUBDIRECTORY(./solidopt/)
   ADD_SUBDIRECTORY(./frac_norm/)
   ADD_SUBDIRECTORY(./00_laplacian_all_dims/)
+  ADD_SUBDIRECTORY(./00_laplacian_all_dims_neu/)
   ADD_SUBDIRECTORY(./elliptic_nonlin/)
   
