added mesh for 4 subdomains and created ex4 and new assembly

--- a/applications/NonLocal/CMakeLists.txt
+++ b/applications/NonLocal/CMakeLists.txt
@@ -6,6 +6,7 @@ IF(SLEPC_FOUND)
   ADD_SUBDIRECTORY(ex1/)
   ADD_SUBDIRECTORY(ex2/)
   ADD_SUBDIRECTORY(ex3/)
+  ADD_SUBDIRECTORY(ex4/)
 ENDIF(SLEPC_FOUND)
   
 
