Moved fractional app to OptimalControl

--- a/applications/OptimalControl/CMakeLists.txt
+++ b/applications/OptimalControl/CMakeLists.txt
@@ -29,7 +29,7 @@ set(OPTCONTROL_FOLDER OptimalControl/)
   ADD_SUBDIRECTORY(./boundary_control_inequality/)
   ADD_SUBDIRECTORY(./nsopt/)
   ADD_SUBDIRECTORY(./solidopt/)
-  ADD_SUBDIRECTORY(./frac_norm/)
+  ADD_SUBDIRECTORY(./fractional/)
   ADD_SUBDIRECTORY(./00_laplacian_all_dims/)
   ADD_SUBDIRECTORY(./00_laplacian_all_dims_neu/)
   ADD_SUBDIRECTORY(./elliptic_nonlin/)
