--- a/applications/NonLocal/CMakeLists.txt
+++ b/applications/NonLocal/CMakeLists.txt
@@ -7,6 +7,7 @@ IF(SLEPC_FOUND)
   ADD_SUBDIRECTORY(ex2/)
   ADD_SUBDIRECTORY(ex3/)
   ADD_SUBDIRECTORY(ex4/)
+  ADD_SUBDIRECTORY(ex5/)
 ENDIF(SLEPC_FOUND)
   
 
