created ex6 for 2 domain nonlocal FETI with 1 Dirichlet and 3 Neumann BC. With the direct solver it does not run

--- a/applications/NonLocal/CMakeLists.txt
+++ b/applications/NonLocal/CMakeLists.txt
@@ -8,6 +8,7 @@ IF(SLEPC_FOUND)
   ADD_SUBDIRECTORY(ex3/)
   ADD_SUBDIRECTORY(ex4/)
   ADD_SUBDIRECTORY(ex5/)
+  ADD_SUBDIRECTORY(ex6/)
 ENDIF(SLEPC_FOUND)
   
 
