--- a/applications/OptimalControl/CMakeLists.txt
+++ b/applications/OptimalControl/CMakeLists.txt
@@ -35,4 +35,5 @@ set(OPTCONTROL_FOLDER OptimalControl/)
   ADD_SUBDIRECTORY(./00_laplacian_all_dims_neu/)
   ADD_SUBDIRECTORY(./elliptic_nonlin/)
   ADD_SUBDIRECTORY(./bonito/)
+  ADD_SUBDIRECTORY(./bonito2/)
   
