--- a/applications/OptimalControl/05_mhdopt/CMakeLists.txt
+++ b/applications/OptimalControl/05_mhdopt/CMakeLists.txt
@@ -6,7 +6,7 @@ ADD_SUBDIRECTORY(./00_state)
 # MHD Optimal Control
   set(OPT_APPLICATION 01_control_lifting_internal)
   ADD_SUBDIRECTORY(${OPT_APPLICATION}/)
-  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)
-  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/output/)
-  FILE(COPY ${OPT_APPLICATION}/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)
+  FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${OPT_APPLICATION}/input/)
+  FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/${OPT_APPLICATION}/output/)
+  FILE(COPY ${OPT_APPLICATION}/input/ DESTINATION ${CMAKE_CURRENT_LIST_DIR}/${OPT_APPLICATION}/input/)
 
