--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -301,7 +301,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_equations/assemble/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/parallel)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/quadrature)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe_quadrature)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/uq)
