--- a/applications/OptimalControl/01_boundary_control_inequality/00_dirichlet/00_dirichlet_boundary_fractional/CMakeLists.txt
+++ b/applications/OptimalControl/01_boundary_control_inequality/00_dirichlet/00_dirichlet_boundary_fractional/CMakeLists.txt
@@ -10,3 +10,6 @@ SET(MAIN_FILE "${THIS_APPLICATION}") # the name of the main file with no extensi
 SET(EXEC_FILE "${MAIN_FILE}") # the name of the executable file
 
 femusMacroBuildApplication(${MAIN_FILE} ${EXEC_FILE})
+
+
+FILE(COPY ./run.sh DESTINATION ${PROJECT_BINARY_DIR})
