--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -109,3 +109,6 @@ ENDIF(BUILD_CONFORMAL)
 IF(BUILD_NITSCHE)
   ADD_SUBDIRECTORY(Nitsche/)
 ENDIF(BUILD_NITSCHE)
+
+
+  ADD_SUBDIRECTORY(2021_fall/)
