minor file/folder name changes done

--- a/applications/2021_fall/CMakeLists.txt
+++ b/applications/2021_fall/CMakeLists.txt
@@ -1,13 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
   
-
-<<<<<<< HEAD
-  ADD_SUBDIRECTORY(./00_laplacian/)
-=======
+  ADD_SUBDIRECTORY(./arani/)
   ADD_SUBDIRECTORY(./ayillah/)
   ADD_SUBDIRECTORY(./gbornia/)
-
   ADD_SUBDIRECTORY(./shaflynn/)
-
->>>>>>> femttu2/master
   
