--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,6 +287,7 @@ ENDIF(SLEPC_FOUND)
 #include femus include files
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/input_parser/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/parallel)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_enums)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_mesh)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_mesh/00_geom_elements/)
@@ -299,9 +300,9 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_solution/01_output/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_equations)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_equations/assemble/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/parallel)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe_quadrature)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/geom_quadrature)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/uq)
