Recreated joloftin folder before doing another merge

--- a/applications/2021_fall/CMakeLists.txt
+++ b/applications/2021_fall/CMakeLists.txt
@@ -5,7 +5,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
   ADD_SUBDIRECTORY(./ayillah/)
   ADD_SUBDIRECTORY(./gbornia/)
-
+  ADD_SUBDIRECTORY(./joloftin/)
   ADD_SUBDIRECTORY(./shaflynn/)
 
 
