--- a/applications/2021_fall/CMakeLists.txt
+++ b/applications/2021_fall/CMakeLists.txt
@@ -6,6 +6,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
   ADD_SUBDIRECTORY(./arani/)
   ADD_SUBDIRECTORY(./ayillah/)
   ADD_SUBDIRECTORY(./GayaniBalasuriya/)
-  ADD_SUBDIRECTORY(./gbornia/)
+  ADD_SUBDIRECTORY(./gbornia_other/)
   ADD_SUBDIRECTORY(./joloftin/)
   ADD_SUBDIRECTORY(./shaflynn/)
