--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,9 @@ ENDIF(APPLE)
 
 
 # Find MPI (optional)
+if(NOT DEFINED CMAKE_SUPPRESS_DEVELOPER_WARNINGS)
+     set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1 CACHE INTERNAL "No dev warnings")
+endif()
 
 FIND_PACKAGE(MPI)
 MESSAGE(STATUS "MPI_FOUND = ${MPI_FOUND}")
