--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ SET(FEMUS_VERSION "${FEMTTU_MAJOR_VERSION}.${FEMTTU_MINOR_VERSION}.${FEMTTU_BUIL
 # to Debug prior to calling PROJECT()
 #SET(CMAKE_BUILD_TYPE "release")
 
-IF(CMAKE_BUILD_TYPE MATCHES "debug")
+IF((CMAKE_BUILD_TYPE MATCHES "debug") OR (CMAKE_BUILD_TYPE MATCHES "Debug"))
   SET(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE})
 ELSE()
   SET(CMAKE_BUILD_TYPE "release")
