--- a/applications/2021_fall/CMakeLists.txt
+++ b/applications/2021_fall/CMakeLists.txt
@@ -1,23 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
   
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-  ADD_SUBDIRECTORY(./00_laplacian/)
-=======
-=======
-
-
->>>>>>> femttu/master
   ADD_SUBDIRECTORY(./ayillah/)
   ADD_SUBDIRECTORY(./gbornia/)
-
+  ADD_SUBDIRECTORY(./rifat/)
   ADD_SUBDIRECTORY(./shaflynn/)
-
-<<<<<<< HEAD
->>>>>>> femttu/master
-=======
-
->>>>>>> femttu/master
-  
