Readded folder in CMakeLists

--- a/applications/2021_fall/CMakeLists.txt
+++ b/applications/2021_fall/CMakeLists.txt
@@ -10,3 +10,4 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
   ADD_SUBDIRECTORY(./hdongamm/)
   ADD_SUBDIRECTORY(./joloftin/)
   ADD_SUBDIRECTORY(./rifat/)
+  ADD_SUBDIRECTORY(./shaflynn/)
