--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -303,6 +303,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_solution)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_solution/01_output/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/04_equations)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/04_equations/assemble/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/04_equations/time_dependent/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe_quadrature)
