Cost functional class, ready to implement mesh-dependent children

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -309,6 +309,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe_quadrature)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/geom_quadrature)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/optimal_control/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/uq)
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
