Created application shankar

--- a/applications/00_tutorial/00_laplacian_all_dims_dir_neu_class_2021_2022/CMakeLists.txt
+++ b/applications/00_tutorial/00_laplacian_all_dims_dir_neu_class_2021_2022/CMakeLists.txt
@@ -12,5 +12,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
   ADD_SUBDIRECTORY(./shaflynn/)
 
   ADD_SUBDIRECTORY(./karthik/)
+  ADD_SUBDIRECTORY(./shankar/)
 
   ADD_SUBDIRECTORY(./zzz_giorgiobornia_collect_all/)
