Condensing mesh files to a single location

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,6 +275,13 @@ CONFIGURE_FILE(
   "${PROJECT_BINARY_DIR}/UseFemus.CMake" @ONLY IMMEDIATE
   )
 
+  
+#############################################################################################
+### Mesh files
+#############################################################################################
+FILE(COPY           ${PROJECT_SOURCE_DIR}/src/02_mesh/01_input/00_mesh_files/ DESTINATION ${PROJECT_BINARY_DIR}/include/00_mesh_files/)
+  
+  
 #############################################################################################
 ### Include files
 #############################################################################################
