New coupled and uncoupled biharmonic example  copies to Karthik folder

--- a/applications/00_tutorial/ex02_poisson_a_all_dims_dir_neu_class_2021_2022/CMakeLists.txt
+++ b/applications/00_tutorial/ex02_poisson_a_all_dims_dir_neu_class_2021_2022/CMakeLists.txt
@@ -11,5 +11,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
   ADD_SUBDIRECTORY(./rifat/)
   ADD_SUBDIRECTORY(./shaflynn/)
 
-  ADD_SUBDIRECTORY(./karthik/)
+  ADD_SUBDIRECTORY(./karthik_poisson/)
+  ADD_SUBDIRECTORY(./Karthik_coupled_biharmonic/)
+  ADD_SUBDIRECTORY(./Karthik_uncoupled_biharmonic/)
+
+
   ADD_SUBDIRECTORY(./shankar/)
