Working towards a common library of functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,7 +339,9 @@ ENDIF(SLEPC_FOUND)
 #include femus include files
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_enums)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/data_types/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/input_parser/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/math/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/00_utils/parallel)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/01_problem)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh)
