--- a/applications/00_tutorial/ex02_poisson_a_all_dims_dir_neu_class_2021_2022/CMakeLists.txt
+++ b/applications/00_tutorial/ex02_poisson_a_all_dims_dir_neu_class_2021_2022/CMakeLists.txt
@@ -13,3 +13,5 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
   ADD_SUBDIRECTORY(./karthik/)
   ADD_SUBDIRECTORY(./shankar/)
+  ADD_SUBDIRECTORY(./shankar_biharmonic_coupled_systems/)
+  ADD_SUBDIRECTORY(./shankar_biharmonic_uncoupled_systems/)
