Reorganized most of the algebra part

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,6 +342,7 @@ FILE(COPY           ${PROJECT_SOURCE_DIR}/src/02_mesh/01_input/00_mesh_files/ DE
 INCLUDE_DIRECTORIES(${PETSC_INCLUDES})
 ADD_DEFINITIONS(${PETSC_DEFINITIONS})
 
+# Include slepc files
 IF(SLEPC_FOUND)
  INCLUDE_DIRECTORIES(${SLEPC_INCLUDE_DIRS})
 ENDIF(SLEPC_FOUND)
@@ -381,15 +382,18 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/04_equations)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/04_equations/00_stationary/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/04_equations/01_time_dependent/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/04_equations/assemble/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe_quadrature)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/geom_quadrature)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/00_vectors/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/01_matrices/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/02_preconditioners/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe_quadrature/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/geom_quadrature/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/optimal_control/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/uq)
-INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/uq/)
+INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/)
 
 # HPCC TTU
 INCLUDE_DIRECTORIES(/opt/ohpc/pub/mpi/openmpi-gnu/1.10.6/include/)
