--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -375,6 +375,9 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/01_input/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/02_partitioning/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/03_refinement/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02_mesh/gencase/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02b_geom_elements_fe/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02c_geom_elements_quadrature/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/02d_fe_evaluations_at_quadrature/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_solution)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_solution/01_output/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/03_solution/02_FE_convergence/)
@@ -386,9 +389,6 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/00_vectors/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/01_matrices/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/02_preconditioners/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fe_quadrature/)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/geom_quadrature/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/optimal_control/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics/)
