Solvers with prec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -389,6 +389,7 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/00_vectors/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/01_matrices/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/02_preconditioners/)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/algebra/03_solvers_with_preconditioner/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ism/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/optimal_control/)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/physics/)
